--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "friendsofsymfony/ckeditor-bundle": "^2.4",
         "gregwar/captcha-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^6.0",
+        "nucleos/dompdf-bundle": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.13",
         "sensio/framework-extra-bundle": "^6.1",
